Closed
Bug 1885061
Opened 1 year ago
Closed 1 year ago
dom/media/platforms/apple/AppleVTDecoder.cpp:10:10: fatal error: 'IOSurface/IOSurface.h' file not found
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
125 Branch
| Tracking | Status | |
|---|---|---|
| firefox125 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
With --enable-project=mobile/ios and the toolkit/moz.configure part of 1883567 backed out, the build fails with:
0:52.74 /tmp/gecko-ios/dom/media/platforms/apple/AppleVTDecoder.cpp:10:10: fatal error: 'IOSurface/IOSurface.h' file not found
0:52.74 10 | #include <IOSurface/IOSurface.h>
0:52.74 | ^~~~~~~~~~~~~~~~~~~~~~~
| Assignee | ||
Comment 1•1 year ago
|
||
and re-enable AppleMedia on iOS.
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/d4cd34850ec4
Fix building AppleVTDecoder.cpp for iOS. r=media-playback-reviewers,gfx-reviewers,jrmuizel,padenot
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox125:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•