Bug 1885061 - Fix building AppleVTDecoder.cpp for iOS. r=media-playback-reviewers,gfx-reviewers,jrmuizel,padenot

and re-enable AppleMedia on iOS.

Differential Revision: https://phabricator.services.mozilla.com/D204455